--- a/.browserslistrc
+++ b/.browserslistrc
@@ -3,12 +3,12 @@
 # https://github.com/browserslist/browserslist#queries
 
 # For the full list of supported browsers by the Angular framework, please see:
-# https://angular.io/guide/browser-support
+# https://angular.dev/reference/versions#browser-support
 
 # You can see what browsers were selected by your queries by running:
 #   npx browserslist
 
-last 1 Chrome version
+last 2 Chrome versions
 last 1 Firefox version
 last 2 Edge major versions
 last 2 Safari major versions
