--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "lint-ci": "ng lint --format json --silent"
   },
   "private": true,
   "dependencies": {
@@ -29,17 +31,21 @@
     "@angular/cdk": "^18.2.5",
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.3",
+    "@stylistic/eslint-plugin": "^2.8.0",
     "@types/d3-scale": "^4.0.8",
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
+    "angular-eslint": "^18.3.1",
+    "eslint": "^9.11.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
