--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "^18.0.3",
     "@angular/platform-browser-dynamic": "^18.0.3",
     "@angular/router": "^18.0.3",
-    "@swimlane/ngx-charts": "^20.5.0",
+    "apexcharts": "^3.53.0",
     "lodash-es": "^4.17.21",
+    "ng-apexcharts": "^1.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -32,12 +33,10 @@
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.3",
     "@stylistic/eslint-plugin": "^2.8.0",
-    "@types/d3-scale": "^4.0.8",
-    "@types/d3-selection": "^3.0.10",
-    "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
     "angular-eslint": "^18.3.1",
+    "color-types": "^1.0.0",
     "eslint": "^9.11.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
