--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cdk": "^18.2.5",
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.3",
+    "@angular/localize": "^18.2.5",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
