--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["color-types"]
+    "types": [
+      "color-types",
+      "@angular/localize"
+    ]
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"]
