--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,7 +3,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": ["jasmine", "color-types"]
+    "types": [
+      "jasmine",
+      "color-types",
+      "@angular/localize"
+    ]
   },
   "files": ["src/test.ts", "src/polyfills.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
