--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "lint-ci": "ng lint --format json --silent"
+    "lint": "npm-run-all -s -c lint:ts lint:scss",
+    "lint:fix": "npm-run-all -s -c lint:ts:fix lint:scss:fix",
+    "lint:ts": "ng lint",
+    "lint:ts:ci": "ng lint --format json --silent",
+    "lint:ts:fix": "ng lint --fix",
+    "lint:scss": "node ./node_modules/.bin/stylelint --config './.stylelintrc.json' --max-warnings 0 \"src/**/*.scss\"",
+    "lint:scss:ci": "node ./node_modules/.bin/stylelint --config './.stylelintrc.json' --max-warnings 0 \"src/**/*.scss\" -f json",
+    "lint:scss:fix": "node ./node_modules/.bin/stylelint --config './.stylelintrc.json' --max-warnings 0 \"src/**/*.scss\" --fix"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +51,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm-run-all": "^4.1.5",
+    "stylelint": "^15.11.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-scss": "^5.3.2",
     "typescript": "~5.4.2",
     "typescript-eslint": "^8.6.0"
   }
