chore: vscode settings add html no formatter config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
   "eslint.validate": [
     "javascript",
     "typescript"
-  ]
+  ],
+  "html.format.unformattedContentDelimiter": "<!--noformat-->"
 }
