refactor: add sass stack files and add @acab/reset.css dep

--- a/angular.json
+++ b/angular.json
@@ -26,12 +26,17 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src"
+              ]
+            },
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/main.scss"
             ],
             "scripts": [
               "node_modules/apexcharts/dist/apexcharts.min.js"
