--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "@acab/reset.css": "^0.10.0",
     "@angular/animations": "^18.0.3",
     "@angular/common": "^18.0.3",
     "@angular/compiler": "^18.0.3",
