--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.3",
     "@angular/localize": "^18.2.5",
+    "@shoelace-style/shoelace": "^2.17.1",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
