--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^18.0.3",
     "apexcharts": "^3.53.0",
     "lodash-es": "^4.17.21",
+    "modern-normalize": "^3.0.1",
     "ng-apexcharts": "^1.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
