--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "modern-normalize": "^3.0.1",
     "ng-apexcharts": "^1.12.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.3",
