--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "angular-eslint": "^18.3.1",
     "color-types": "^1.0.0",
     "eslint": "^9.11.0",
+    "jasmine": "^5.3.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -61,6 +62,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-scss": "^6.7.0",
     "typescript": "~5.4.2",
-    "typescript-eslint": "^8.6.0"
+    "typescript-eslint": "^8.6.0",
+    "zone.js": "^0.15.0"
   }
 }
