--- a/package.json
+++ b/package.json
@@ -19,50 +19,48 @@
   "private": true,
   "dependencies": {
     "@acab/reset.css": "^0.10.0",
-    "@angular/animations": "^18.0.3",
-    "@angular/common": "^18.0.3",
-    "@angular/compiler": "^18.0.3",
-    "@angular/core": "^18.0.3",
-    "@angular/forms": "^18.0.3",
-    "@angular/platform-browser": "^18.0.3",
-    "@angular/platform-browser-dynamic": "^18.0.3",
-    "@angular/router": "^18.0.3",
-    "apexcharts": "^3.53.0",
+    "@angular/animations": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@shoelace-style/shoelace": "^2.17.1",
+    "apexcharts": "^3.54.0",
     "lodash-es": "^4.17.21",
     "modern-normalize": "^3.0.1",
     "ng-apexcharts": "^1.12.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.3",
-    "@angular/cdk": "^18.2.5",
-    "@angular/cli": "^18.0.3",
-    "@angular/compiler-cli": "^18.0.3",
-    "@angular/localize": "^18.2.5",
-    "@shoelace-style/shoelace": "^2.17.1",
+    "@angular-devkit/build-angular": "^18.2.6",
+    "@angular/cdk": "^18.2.6",
+    "@angular/cli": "^18.2.6",
+    "@angular/compiler-cli": "^18.2.0",
+    "@angular/localize": "^18.2.6",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
     "angular-eslint": "^18.3.1",
     "color-types": "^1.0.0",
-    "eslint": "^9.11.0",
-    "jasmine": "^5.3.0",
-    "jasmine-core": "~5.1.0",
+    "eslint": "^9.11.1",
+    "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "npm-run-all": "^4.1.5",
-    "stylelint": "^16.3.1",
+    "stylelint": "^16.9.0",
     "stylelint-actions-formatters": "^16.3.1",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-sass-guidelines": "^12.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-scss": "^6.7.0",
-    "typescript": "~5.4.2",
-    "typescript-eslint": "^8.6.0",
-    "zone.js": "^0.15.0"
+    "typescript": "~5.5.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
