--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "@stylistic/eslint-plugin": "^2.8.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
+    "@types/prop-types": "^15.7.13",
+    "@types/react": "^18.3.11",
     "angular-eslint": "^18.3.1",
     "color-types": "^1.0.0",
+    "csstype": "^3.1.3",
     "eslint": "^9.11.1",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
