--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm-run-all": "^4.1.5",
     "stylelint": "^16.9.0",
     "stylelint-actions-formatters": "^16.3.1",
     "stylelint-config-idiomatic-order": "^10.0.0",
